--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -5625,6 +5625,7 @@ due-date=تاريخ الإنتهاء
 due-date-by-sla=تاريخ الاستحقاق حسب SLA
 due-to-inactivity-your-session-has-expired=بسبب عدم النشاط، انتهت صلاحية جلستك. يُرجى حفظ أي بيانات قد تكون أدخلتها قبل تحديث الصفحة.
 due-to-inactivity-your-session-will-expire=بسبب عدم النشاط، ستنتهي صلاحية جلستك في غضون {0}. لتمديد جلستك لمدة {1} دقيقة/دقائق أخرى، يُرجى الضغط على <em>تمديد</em>.‏ {2}
+due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=تكرار
 duplicate-article-version=إصدار مقالة مكرر
 duplicate-document-version=تكرار إصدار المستند
