--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -5625,6 +5625,7 @@ due-date=Venciment
 due-date-by-sla=Data de venciment segons l'SLA
 due-to-inactivity-your-session-has-expired=A causa de la inactivitat, la sessió ha caducat. Deseu qualsevol dada que hàgiu introduït abans d'actualitzar la pàgina.
 due-to-inactivity-your-session-will-expire=A causa de la inactivitat, la sessió caducarà d'aquí {0}. Per allargar la sessió {1} minut/s més, premeu el botó <em>Allarga</em>. {2}
+due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=Duplica
 duplicate-article-version=Duplica la versió de l'article
 duplicate-document-version=Duplica la versió del document
