--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -5625,6 +5625,7 @@ due-date=Fecha límite
 due-date-by-sla=Fecha de vencimiento por SLA
 due-to-inactivity-your-session-has-expired=La sesión expiró por inactividad. Guarde los datos que introdujo antes de actualizar la página.
 due-to-inactivity-your-session-will-expire=La sesión expirará en {0} por inactividad. Para prolongar la sesión otros {1} minuto(s), presione el botón <em>Extender</em>. {2}
+due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=Duplicar
 duplicate-article-version=Duplicar versión del artículo
 duplicate-document-version=Duplicar versión del documento
