--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -5625,6 +5625,7 @@ due-date=تاريخ تحويل
 due-date-by-sla=موعد مقرر توسط SLA (Automatic Translation)
 due-to-inactivity-your-session-has-expired=به دلیل عدم فعالیت ، جلسه شما منقضی شده است. لطفاً قبل از رفرش ، صفحه را ذخیره کنید.
 due-to-inactivity-your-session-will-expire=بدلیل عدم فعالیت، کاربری شما تا {0} ثانیه دیگر از سایت خارج خواهد شد. برای افزایش زمان نشست فعلی برای {1} دقیقه دیگر، لطفا دکمه <em>تمدید</em> را کلیک نمایید. {2}
+due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=تکراری
 duplicate-article-version=نسخه مقاله تکراری (Automatic Translation)
 duplicate-document-version=نسخه سند تکراری (Automatic Translation)
