--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -5625,6 +5625,7 @@ due-date=Eräpäivämäärä
 due-date-by-sla=SLA:n Eräpäivä
 due-to-inactivity-your-session-has-expired=Istuntosi on vanhentunut toimettomuuden vuoksi. Tallenna mahdollisesti syöttämäsi tiedot ennen sivun päivittämistä.
 due-to-inactivity-your-session-will-expire=Toimettomuuden vuoksi istuntosi vanhenee {0}. Jatkaaksesi istuntoasi vielä {1} minuutti(a), paina <em>Laajenna</em>-painiketta. {2}
+due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=Kaksoiskappale
 duplicate-article-version=Artikkeliversion Kaksoiskappale
 duplicate-document-version=Asiakirjaversion Kaksoiskappale
