--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -5625,6 +5625,7 @@ due-date=Esedékes dátum
 due-date-by-sla=Esedékes SLA szerint
 due-to-inactivity-your-session-has-expired=A munkamenet inaktivitás miatt lejárt. Az oldal frissítése előtt mentsd el az esetleg beírt adatokat.
 due-to-inactivity-your-session-will-expire=A munkamenet inaktivitás miatt lejár {0} múlva. A munkamenet {1} perccel történő meghosszabbításához nyomd meg a <em>Meghosszabbítás</em> gombot. {2}
+due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=Másolat
 duplicate-article-version=Megkettőzött cikkverzió
 duplicate-document-version=Megkettőzött dokumentumverzió
