--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -5625,6 +5625,7 @@ due-date=תאריך יעד
 due-date-by-sla=תאריך יעד לפי SLA (Automatic Translation)
 due-to-inactivity-your-session-has-expired=עקב חוסר פעילות, ההפעלה שלך פגה. נא לשמור את כל הנתונים שייתכן והזנת לפני רענון הדף.
 due-to-inactivity-your-session-will-expire=עקב חוסר פעילות, ההפעלה שלך תפוג ב-{0}. כדי להרחיב את הפעלה שלך בעוד {1} דקות, אנא לחץ על הכפתור<em>הרחב</em>. {2}
+due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=העתק
 duplicate-article-version=שכפול גירסת מאמר (Automatic Translation)
 duplicate-document-version=שכפול גירסת מסמך (Automatic Translation)
