--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -5625,6 +5625,7 @@ due-date=期限
 due-date-by-sla=SLA別の期日
 due-to-inactivity-your-session-has-expired=一定期間操作されなかったため、セッションが無効になりました。ページをリフレッシュする前に、入力していた値を保存してください。
 due-to-inactivity-your-session-will-expire=一定期間操作されなかったため、{0}でセッションが無効になります。もう{1}分セッションを延長するには、<em>延長</em> ボタンを押下してください。{2}
+due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=コピーする
 duplicate-article-version=重複している記事バージョン
 duplicate-document-version=重複しているドキュメントバージョン
