--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -5625,6 +5625,7 @@ due-date=만기가 되는 날짜
 due-date-by-sla=SLA별 기한
 due-to-inactivity-your-session-has-expired=활동이 없어 세션이 만료되었습니다. 계속하기 전에 입력한 데이터가 로컬에 저장되었는지 확인하십시오.
 due-to-inactivity-your-session-will-expire=비활성 상태로 인해 세션이 {0} 후에 만료됩니다. 세션을 {1}분 더 연장하려면 <em>연장</em> 버튼을 누르십시오. {2}
+due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=복제
 duplicate-article-version=문서 버전 복제
 duplicate-document-version=중복 문서 버전
