--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -5625,6 +5625,7 @@ due-date=Dată Limită
 due-date-by-sla=Data scadenței de către SLA (Automatic Translation)
 due-to-inactivity-your-session-has-expired=Din cauza inactivitatii sesiunea a expirat. Va rugam sa salvati orice date care s-au introdus inainte de a relua sesiunea.
 due-to-inactivity-your-session-will-expire=Avertizare! Din cauza inactivității, sesiunea va expira în {0}. Pentru a prelungi sesiunea pentru încă {1} de minute vă rugăm să apăsați butonul <em>Extinde</em>. {2}
+due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=Duplicat (Automatic Translation)
 duplicate-article-version=Versiune articol dublată (Automatic Translation)
 duplicate-document-version=Versiune document dublată (Automatic Translation)
