--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -5625,6 +5625,7 @@ due-date=Förfallodatum
 due-date-by-sla=Förfallodatum för SLA
 due-to-inactivity-your-session-has-expired=Din session har slutat gälla på grund av inaktivitet. Spara data som du kan ha angett innan du uppdaterar sidan.
 due-to-inactivity-your-session-will-expire=På grund av inaktivitet kommer din session att sluta gälla om {0}. Om du vill förlänga din session med {1} minut/minuter trycker du på knappen <em>Förläng</em>. {2}
+due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=Duplicera
 duplicate-article-version=Duplicera artikelversion
 duplicate-document-version=Dubblettdokumentversion
