--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -5625,6 +5625,7 @@ due-date=วันครบกำหนด
 due-date-by-sla=วันที่ครบกำหนดโดย SLA
 due-to-inactivity-your-session-has-expired=เนื่องจากไม่มีการใช้งาน เซสชันจึงหมดอายุแล้ว ก่อนที่จะดำเนินการต่อ ตรวจสอบให้แน่ใจว่าข้อมูลที่ป้อนได้รับการบันทึกไว้ในเครื่อง
 due-to-inactivity-your-session-will-expire=เนื่องจากไม่มีการใช้งาน เซสชันจะหมดอายุใน {0} หากต้องการขยายเซสชันอีก {1} นาที โปรดกดปุ่ม <em>ขยาย</em> {2}
+due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=ซ้ำ
 duplicate-article-version=เวอร์ชันที่ซ้ำกัน
 duplicate-document-version=เวอร์ชันเอกสารที่ซ้ำ
