--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -5625,6 +5625,7 @@ due-date=截止日期
 due-date-by-sla=截止日期（按服务水平协议）
 due-to-inactivity-your-session-has-expired=由于不活动，您的会话已经过期。请在刷新页面之前保存您输入的任何数据。
 due-to-inactivity-your-session-will-expire=由于不活动，您的会话将在{0} 后过期。要延长会话另一个{1} 分钟，请按下<em> 扩展</em>按钮。{2}
+due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=复制
 duplicate-article-version=复制文章版本
 duplicate-document-version=文档版本重复
