--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -5625,6 +5625,7 @@ due-date=到期日期
 due-date-by-sla=截止日期 (按 SLA)
 due-to-inactivity-your-session-has-expired=由於不活躍，您的 session 已過期。 重新整理頁面之前，請保存您可能輸入的所有資料。
 due-to-inactivity-your-session-will-expire=由於不活躍，您的 session 將在 {0} 中過期。 要延長 session 另外 {1} 分鐘，請按<em>延長</em>按鈕。 {2}
+due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=重複
 duplicate-article-version=複製文章版本
 duplicate-document-version=重複的文件版本
