--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -5625,6 +5625,7 @@ due-date=Fälligkeitsdatum
 due-date-by-sla=Fälligkeitsdatum nach SLA
 due-to-inactivity-your-session-has-expired=Ihre Sitzung ist wegen Inaktivität abgelaufen. Bevor Sie fortfahren, stellen Sie bitte sicher, dass Ihre eingegebenen Daten lokal gespeichert werden.
 due-to-inactivity-your-session-will-expire=Ihre Sitzung wird in {0} wegen Inaktivität ablaufen. Um Ihre Sitzung um {1} Minute(n) zu verlängern, tippen Sie bitte auf die Schaltfläche <em>Verlängern</em>. {2}
+due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=Duplikat
 duplicate-article-version=Duplizierte Artikelversion
 duplicate-document-version=Duplizierte Dokumentversion
