--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
@@ -5625,6 +5625,7 @@ due-date=Date d'échéance
 due-date-by-sla=Date limite par SLA
 due-to-inactivity-your-session-has-expired=Votre session a expiré pour cause d'inactivité. Veuillez enregistrer toute donnée que vous pourriez avoir saisie avant d'actualiser la page.
 due-to-inactivity-your-session-will-expire=Votre session expirera dans {0} pour cause d'inactivité. Pour ajouter {1} minute(s) à la durée de votre session, veuillez appuyer sur le bouton <em>Étendre</em>. {2}
+due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=Dupliquer
 duplicate-article-version=Dupliquer la version de l'article
 duplicate-document-version=Dupliquer la version du document
