--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -5625,6 +5625,7 @@ due-date=अन्तिम तिथि
 due-date-by-sla=एसएलए द्वारा नियत तिथि (Automatic Translation)
 due-to-inactivity-your-session-has-expired=Due to inactivity, your session has expired. Before you continue, make sure your entered data is saved locally. (Automatic Copy)
 due-to-inactivity-your-session-will-expire=Due to inactivity, your session will expire in {0}. To extend your session another {1} minute(s), please press the <em>Extend</em> button. {2} (Automatic Copy)
+due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=हूबहू नक़ल (Automatic Translation)
 duplicate-article-version=डुप्लीकेट लेख संस्करण (Automatic Translation)
 duplicate-document-version=डुप्लीकेट दस्तावेज़ संस्करण (Automatic Translation)
