--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -5624,6 +5624,7 @@ due-date=Data di Scadenza
 due-date-by-sla=Data di scadenza per contratto di servizio (Automatic Translation)
 due-to-inactivity-your-session-has-expired=A causa di inattività, la sessione è scaduta. Prima di aggiornare la pagina si prega di salvare tutti i dati immessi.
 due-to-inactivity-your-session-will-expire=A causa di inattività, la sessione scadrà tra {0} minuti. Per estendere la sessione di altri {1} minuto/i, premere il tasto <em>Estendi</em>. {2}
+due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=Duplica
 duplicate-article-version=Versione duplicata dell'articolo (Automatic Translation)
 duplicate-document-version=Versione documento duplicata (Automatic Translation)
