--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -5625,6 +5625,7 @@ due-date=Vervaldatum
 due-date-by-sla=Vervaldatum volgens de SLA
 due-to-inactivity-your-session-has-expired=Uw sessie is verlopen door inactiviteit. Sla eventueel ingevoerde gegevens op voordat u de pagina opnieuw laadt.
 due-to-inactivity-your-session-will-expire=Uw sessie zal verlopen door inactiviteit in {0}. Druk op de knop <em>Verlengen</em> om uw sessie nog {1} minute(n) te verlengen. {2}
+due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=Duplicaat
 duplicate-article-version=Dubbele artikelversie
 duplicate-document-version=Documentversie dupliceren
