--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -5625,6 +5625,7 @@ due-date=Prazo
 due-date-by-sla=Data de validade por SLA
 due-to-inactivity-your-session-has-expired=Devido a inatividade, sua sessão expirou. Por favor, salve quaisquer dados que você tenha inserido antes de atualizar a página.
 due-to-inactivity-your-session-will-expire=Devido a inatividade, sua sessão expirará em {0}. Para estender sua sessão por mais {1} minuto(s), por favor, pressione o botão <em>Estender</em>. {2}
+due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=Duplicar
 duplicate-article-version=Duplicar Versão do Artigo
 duplicate-document-version=Duplicar versão de documento
