--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -5625,6 +5625,7 @@ due-date=கடைசி நாள்
 due-date-by-sla=Due Date by SLA (Automatic Copy)
 due-to-inactivity-your-session-has-expired=செயல்பாடின்மை உங்கள் session காலாவதியாகிவிட்டது. Page Refresh செய்வதற்கு முன்பு நீங்கள் உள்ளிட்ட தரவு சேமிக்க.
 due-to-inactivity-your-session-will-expire=செயல்பாடின்மை காரணமாக உங்கள் session {0} ல் காலாவதியாகிவிடும். உங்கள் session நீட்டிக்க மற்றொரு {1} நிமிடம் (கள்), தயவுசெய்து <em>எக்ஸ்டென்ட்</em> பட்டனை அழுத்துதல். {2}
+due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=நகல்
 duplicate-article-version=Duplicate Article Version (Automatic Copy)
 duplicate-document-version=Duplicate Document Version (Automatic Copy)
