--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -5625,6 +5625,7 @@ due-date=Bitiş Tarihi
 due-date-by-sla=SLA'ya Göre Son Tarih (Automatic Translation)
 due-to-inactivity-your-session-has-expired=Due to inactivity, your session has expired. Before you continue, make sure your entered data is saved locally. (Automatic Copy)
 due-to-inactivity-your-session-will-expire=Due to inactivity, your session will expire in {0}. To extend your session another {1} minute(s), please press the <em>Extend</em> button. {2} (Automatic Copy)
+due-to-permission-restrictions,-this-content-cannot-be-displayed=Due to permission restrictions, this content cannot be displayed. (Automatic Copy)
 duplicate=Yine -lenen (Automatic Translation)
 duplicate-article-version=Yinelenen Makale Sürümü (Automatic Translation)
 duplicate-document-version=Belge Sürümünü Çoğalt (Automatic Translation)
