--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -11588,7 +11588,7 @@ page-design-options=Opciones de diseño de página
 page-display-order=Orden de disposición de las páginas
 page-edition-mode-x=Modo de edición de página: {0}
 page-editor-auto-extend-session-enabled-description=Al habilitar esta opción, se extenderá automáticamente la sesión mientras el editor de páginas esté abierto.
-page-editor-autosaves-your-work=Page Editor autosaves your work (Automatic Copy)
+page-editor-autosaves-your-work=Page editor autosaves your work. (Automatic Copy)
 page-editor-configuration-name=Editor de páginas
 page-editor-max-number-of-items-edit-mode-description=El número máximo de elementos que se muestran en una colección está limitado en el modo de edición debido al rendimiento de representación de páginas. Este límite no afecta a la visualización de la colección en la página publicada. Aumentar este valor podría afectar al rendimiento de una página de contenido en el modo de edición.
 page-elements=Elementos de la página
