--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -11588,7 +11588,7 @@ page-design-options=Options de design de page
 page-display-order=Page d'affichage de la commande
 page-edition-mode-x=Mode d'édition de pages : {0}
 page-editor-auto-extend-session-enabled-description=Activer cette option permettra d'étendre automatiquement la session quand l'éditeur de pages est ouvert.
-page-editor-autosaves-your-work=Page Editor autosaves your work (Automatic Copy)
+page-editor-autosaves-your-work=Page editor autosaves your work. (Automatic Copy)
 page-editor-configuration-name=Éditeur de pages
 page-editor-max-number-of-items-edit-mode-description=Le nombre maximal d'éléments affichés dans une collection est limité en mode Modifier, en raison des performances de rendu de la page. Cette limite n'affecte pas la visualisation de la collection dans la page publiée. Veuillez noter que l'augmentation de cette valeur peut avoir un impact négatif sur les performances du mode Modifier d'une page de contenu.
 page-elements=Éléments de la page
