--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -11586,7 +11586,7 @@ page-design-options=पेज डिज़ाइन विकल्प (Automati
 page-display-order=अपडेट Display ऑर्डर
 page-edition-mode-x=Page Edition Mode: {0} (Automatic Copy)
 page-editor-auto-extend-session-enabled-description=पेज एडिटर खोले जाने के दौरान सक्षम होने से सत्र का विस्तार स्वत: हो जाएगा. (Automatic Translation)
-page-editor-autosaves-your-work=Page Editor autosaves your work (Automatic Copy)
+page-editor-autosaves-your-work=Page editor autosaves your work. (Automatic Copy)
 page-editor-configuration-name=पेज एडिटर (Automatic Translation)
 page-editor-max-number-of-items-edit-mode-description=The maximum number of items that are shown in a collection are limited in the Edit mode, due to page render performance. This limit does not affect the collection visualization in the published page. Please be aware that increasing this value might have a negative impact on the performance of the Edit mode of a Content Page. (Automatic Copy)
 page-elements=पेज एलिमेंट्स (Automatic Translation)
