--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -11589,7 +11589,7 @@ page-design-options=Oldaltervezés lehetőségei
 page-display-order=Oldal megjelenítési sorrend
 page-edition-mode-x=Oldalszerkesztési üzemmód: {0}
 page-editor-auto-extend-session-enabled-description=Az engedélyezés automatikusan meghosszabbítja a munkamenetet, amíg az oldalszerkesztő nyitva van.
-page-editor-autosaves-your-work=Page Editor autosaves your work (Automatic Copy)
+page-editor-autosaves-your-work=Page editor autosaves your work. (Automatic Copy)
 page-editor-configuration-name=Oldalszerkesztő
 page-editor-max-number-of-items-edit-mode-description=A gyűjteményben megjeleníthető elemek maximális száma Szerkesztés módban korlátozott az oldalmegjelenítés teljesítménye miatt. Ez a korlátozás nincs hatással a gyűjtemény közzétett oldalon történő megjelenítésére. Kérjük, vegye figyelembe, hogy az érték növelése negatív hatással van a Tartalom oldal teljesítményére Szerkesztés módban.
 page-elements=Oldal elemei
