--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -11588,7 +11588,7 @@ page-design-options=ページデザインオプション
 page-display-order=ページ表示順序
 page-edition-mode-x=ページ編集モード: {0}
 page-editor-auto-extend-session-enabled-description=この設定を有効にすると、ページエディタを開いている限りはセッションが自動延長されます。
-page-editor-autosaves-your-work=Page Editor autosaves your work (Automatic Copy)
+page-editor-autosaves-your-work=Page editor autosaves your work. (Automatic Copy)
 page-editor-configuration-name=ページエディタ
 page-editor-max-number-of-items-edit-mode-description=ページ表示のパフォーマンスを考慮し、編集モードではコレクション内の最大項目数が制限されています。この制限は公開ページでのコレクション表示には影響しません。この値を増やすと、コンテントページの編集モードのパフォーマンスに悪影響を及ぼす可能性があることに注意してください。
 page-elements=ページ要素
