--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -11589,7 +11589,7 @@ page-design-options=Opties voor paginaontwerp
 page-display-order=Volgorde van paginaweergave
 page-edition-mode-x=Paginabewerkingsmodus: {0}
 page-editor-auto-extend-session-enabled-description=Bij inschakeling wordt de sessie automatisch verlengd terwijl de pagina-editor open is.
-page-editor-autosaves-your-work=Page Editor autosaves your work (Automatic Copy)
+page-editor-autosaves-your-work=Page editor autosaves your work. (Automatic Copy)
 page-editor-configuration-name=Pagina-editor
 page-editor-max-number-of-items-edit-mode-description=Het maximale aantal items dat in een collectie getoond wordt, is beperkt in de bewerkingsmodus vanwege de weergaveprestatie van de pagina. Deze limiet heeft geen invloed op de visualisatie van de collectie op de gepubliceerde pagina. Houd er rekening mee dat het verhogen van deze waarde een negatieve invloed kan hebben op de prestatie van de bewerkingsmodus van een inhoudpagina.
 page-elements=Pagina-elementen
