--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -11586,7 +11586,7 @@ page-design-options=Page Design Options
 page-display-order=ลำดับแสดงผลเพจ
 page-edition-mode-x=Page Edition Mode: {0} (Automatic Copy)
 page-editor-auto-extend-session-enabled-description=การเปิดใช้งานจะขยายเซสชั่นโดยอัตโนมัติในขณะที่ page editor ถูกเปิด
-page-editor-autosaves-your-work=Page Editor autosaves your work (Automatic Copy)
+page-editor-autosaves-your-work=Page editor autosaves your work. (Automatic Copy)
 page-editor-configuration-name=Page Editor
 page-editor-max-number-of-items-edit-mode-description=จำนวนสูงสุดของรายการที่แสดงในคอลเล็กชันถูกจำกัดในโหมดแก้ไข เนื่องจากประสิทธิภาพการเรนเดอร์หน้า ขีดจำกัดนี้ไม่มีผลกับการแสดงภาพคอลเลกชันในหน้าที่เผยแพร่ โปรดทราบว่าการเพิ่มค่านี้อาจส่งผลเสียต่อประสิทธิภาพของโหมดแก้ไขของหน้าเนื้อหา
 page-elements=เพจเอเลเมนท์
