--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -11588,7 +11588,7 @@ page-design-options=页面设计选项
 page-display-order=页面显示次序
 page-edition-mode-x=页面编辑模式：{0}
 page-editor-auto-extend-session-enabled-description=启用此选项将在页面编辑器打开时自动延长会话。
-page-editor-autosaves-your-work=Page Editor autosaves your work (Automatic Copy)
+page-editor-autosaves-your-work=Page editor autosaves your work. (Automatic Copy)
 page-editor-configuration-name=页面编辑器
 page-editor-max-number-of-items-edit-mode-description=由于页面呈现性能，在编辑模式下，集合中显示的最大条目数会受限。此限制并不影响集合在已发布页面中的可视化显示。请注意，增加此值可能会对内容页面的编辑模式的性能产生负面影响。
 page-elements=页面元素
