--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -11587,7 +11587,7 @@ page-design-options=頁面設計選項
 page-display-order=頁面顯示順序
 page-edition-mode-x=Page Edition Mode: {0} (Automatic Copy)
 page-editor-auto-extend-session-enabled-description=啟用將在打開頁面編輯器時自動擴展工作階段。 (Automatic Translation)
-page-editor-autosaves-your-work=Page Editor autosaves your work (Automatic Copy)
+page-editor-autosaves-your-work=Page editor autosaves your work. (Automatic Copy)
 page-editor-configuration-name=頁面編輯器
 page-editor-max-number-of-items-edit-mode-description=The maximum number of items that are shown in a collection are limited in the Edit mode, due to page render performance. This limit does not affect the collection visualization in the published page. Please be aware that increasing this value might have a negative impact on the performance of the Edit mode of a Content Page. (Automatic Copy)
 page-elements=頁面元素
