--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -11588,7 +11588,7 @@ page-design-options=Optionen für das Seitendesign
 page-display-order=Anzeigereihenfolge der Seiten
 page-edition-mode-x=Seitenausgabemodus: {0}
 page-editor-auto-extend-session-enabled-description=Durch das Aktivieren wird die Sitzung automatisch verlängert, während der Seiteneditor geöffnet wird.
-page-editor-autosaves-your-work=Page Editor autosaves your work (Automatic Copy)
+page-editor-autosaves-your-work=Page editor autosaves your work. (Automatic Copy)
 page-editor-configuration-name=Seiteneditor
 page-editor-max-number-of-items-edit-mode-description=Die maximale Anzahl der Elemente, die in einer Sammlung angezeigt werden, ist im Bearbeitungsmodus begrenzt, um die Leistung der Seite zu verbessern. Diese Begrenzung hat keinen Einfluss auf die Darstellung der Sammlung auf der veröffentlichten Seite. Bitte beachten Sie, dass eine Erhöhung dieses Wertes negative Auswirkungen auf die Leistung des Bearbeitungsmodus einer Inhaltsseite haben kann.
 page-elements=Seitenelemente
